--- a/requirements.txt
+++ b/requirements.txt
@@ -1,206 +1,89 @@
-absl-py==0.7.1
-appdirs==1.4.3
-apturl==0.5.2
-asn1crypto==0.24.0
-astor==0.7.1
-astroid==2.2.5
-Attr-Dict==1.0.0
-attrdict==2.0.1
-attrs==19.1.0
-audioread==2.1.8
-backcall==0.1.0
-beautifulsoup4==4.6.0
-bleach==3.1.0
-Brlapi==0.6.6
-caffe==1.0.0
-caffe2==0.8.1
-certifi==2018.11.29
-cffi==1.11.5
-chardet==3.0.4
-command-not-found==0.3
-cryptography==2.1.4
-cupshelpers==1.0
-cycler==0.10.0
-Cython==0.29.7
-decorator==4.4.0
-defer==1.0.6
-defusedxml==0.5.0
-distro-info==0.18
-entrypoints==0.3
-flake8==3.5.0
-future==0.15.2
-gast==0.2.2
-graphviz==0.11
-grpcio==1.18.0
-gurobipy==8.1.0
-h5py==2.9.0
-hiddenlayer==0.2
-html5lib==0.999999999
-httplib2==0.9.2
-idna==2.8
-imageio==2.5.0
-ipykernel==5.1.0
-ipython==7.4.0
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
-isort==4.3.20
-jedi==0.13.3
-Jinja2==2.10
-joblib==0.13.2
-jsonschema==3.0.1
-jupyter==1.0.0
-jupyter-client==5.2.4
-jupyter-console==6.0.0
-jupyter-core==4.4.0
-jupyterthemes==0.20.0
-kaggle==1.5.1.1
-keract==2.5.1
-Keras==2.2.4
-Keras-Applications==1.0.7
-Keras-Preprocessing==1.0.9
-keras-resnet==0.2.0
-keras-retinanet==0.5.0
-keyring==10.6.0
-keyrings.alt==3.0
-kiwisolver==1.1.0
-labelme==3.5.0
-language-selector==0.1
-launchpadlib==1.10.6
-lazr.restfulclient==0.13.5
-lazr.uri==1.0.3
-lazy-object-proxy==1.4.1
-lesscpy==0.13.0
-leveldb==0.1
-librosa==0.6.3
-llvmlite==0.29.0
-louis==3.5.0
-lxml==4.2.1
-macaroonbakery==1.1.3
-Mako==1.0.7
-Markdown==3.0.1
-MarkupSafe==1.1.1
-matplotlib==3.0.3
-mccabe==0.6.1
-meld==3.18.0
-mistune==0.8.4
-mpmath==1.1.0
-nbconvert==5.4.1
-nbformat==4.4.0
-nested-dict==1.61
-networkx==2.3
-nose==1.3.7
-nose-parameterized==0.3.4
-notebook==5.7.7
-numba==0.44.0
-numexpr==2.6.4
-numpy==1.16.4
-nvidia-ml-py==7.352.0
-oauth==1.0.1
-olefile==0.45.1
-opencv-python==4.1.0.25
-pandas==0.23.4
-pandocfilters==1.4.2
-parso==0.3.4
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==6.2.1
-pluggy==0.6.0
-ply==3.11
-progressbar2==3.39.3
-prometheus-client==0.6.0
-prompt-toolkit==2.0.9
-protobuf==3.6.1
-ptyprocess==0.6.0
-py==1.5.2
-pycairo==1.16.2
-pycodestyle==2.3.1
-pycparser==2.18
-pycrypto==2.6.1
-pycuda==2018.1
-pycups==1.9.73
-pydot==1.2.3
-pyflakes==1.6.0
-Pygments==2.3.1
-pygobject==3.26.1
-pygpu==0.7.6
-pyinotify==0.9.6
-pylint==2.3.1
-pymacaroons==0.13.0
-PyNaCl==1.1.2
-Pyomo==5.5.1
-pyOpenSSL==17.5.0
-pyparsing==2.4.0
-pyRFC3339==1.0
-pyrsistent==0.14.11
-pytest==3.3.2
-python-apt==1.6.2
-python-dateutil==2.8.0
-python-debian==0.1.32
-python-slugify==1.2.6
-python-utils==2.3.0
-pytools==2017.6
-pytz==2018.7
-PyUtilib==5.6.3
-PyWavelets==1.0.3
-pyxdg==0.25
-PyYAML==5.1
-pyzmq==18.0.1
-qtconsole==4.4.3
-QtPy==1.5.2
-reportlab==3.4.0
-requests==2.21.0
-requests-unixsocket==0.1.5
-resampy==0.2.1
-robust-loss-pytorch==0.0.2
-scikit-cuda==0.5.2
-scikit-image==0.15.0
-scikit-learn==0.21.2
-scipy==1.3.0
-screen-resolution-extra==0.0.0
-seaborn==0.9.0
-SecretStorage==2.3.1
-Send2Trash==1.5.0
-simplegeneric==0.8.1
-simplejson==3.13.2
-six==1.12.0
--e git+https://github.com/tariqdaouda/Spyrkle.git@598aa131e3016b33c55fc22aabaa30d6bd0e177b#egg=Spyrkle
-ssh-import-id==5.7
-system-service==0.3
-systemd-python==234
-tables==3.4.2
-tensorboard==1.12.2
-tensorflow==1.11.0
-tensorflow-gpu==1.12.0
+_libgcc_mutex==0.1
+absl-py==1.0.0
+astunparse==1.6.3
+attrs==21.4.0
+autograd==1.3
+ca-certificates==2021.10.26
+cachetools==4.2.4
+certifi==2021.10.8
+charset-normalizer==2.0.9
+cycler==0.11.0
+edward==1.3.5
+flatbuffers==2.0
+fonttools==4.28.5
+future==0.18.2
+gast==0.4.0
+google-auth==2.3.3
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.43.0
+h5py==3.6.0
+idna==3.3
+importlib-metadata==4.10.0
+iniconfig==1.1.1
+joblib==1.1.0
+keras==2.7.0 
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.2
+ld_impl_linux-64==2.35.1
+libclang==12.0.0
+libffi==3.3
+libgcc-ng==9.1.0
+libstdcxx-ng==9.1.0
+Markdown==3.3.6
+matplotlib==3.5.1
+ncurses==6.3
+networkx==2.6.3
+numpy==1.22.0
+oauthlib==3.1.1
+openssl==1.1.1l
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.3.5
+patsy==0.5.2
+Pillow==8.4.0
+pip==21.2.4
+pluggy==1.0.0
+protobuf==3.19.1
+py==1.11.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==3.0.6
+pypmc==1.2
+pytest==6.2.5
+python==3.8.12
+python-dateutil==2.8.2
+pytz==2021.3
+quadprog==0.1.11
+readline==8.1
+requests==2.27.0
+requests-oauthlib==1.3.0
+rsa==4.8
+scikit-learn==1.0.2
+scipy==1.7.3
+seaborn==0.11.2
+setuptools==58.0.4
+six==1.16.0
+sqlite==3.37.0 
+statsmodels==0.13.1
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.7.0
+tensorflow-estimator==2.7.0
+tensorflow-io-gcs-filesystem==0.23.1
 termcolor==1.1.0
-terminado==0.8.2
-testpath==0.4.2
-Theano==1.0.3
-torch==1.1.0
-torch-dct==0.1.5
-torchfile==0.1.0
-torchnet==0.0.4
-torchsummary==1.5.1
-torchvision==0.2.1
-torchviz==0.0.1
-tornado==6.0.2
-tqdm==4.28.1
-traitlets==4.3.2
-typed-ast==1.3.5
-ubuntu-drivers-common==0.0.0
-ufw==0.35
-unattended-upgrades==0.1
-Unidecode==1.0.23
-urllib3==1.24.1
-usb-creator==0.3.3
-virtualenv==15.1.0
-visdom==0.1.8.5
-wadllib==1.3.2
-warmup-scheduler==0.1
-wcwidth==0.1.7
-webencodings==0.5.1
-websocket-client==0.54.0
-Werkzeug==0.14.1
-widgetsnbextension==3.4.2
-wrapt==1.11.1
-xkit==0.0.0
-zope.interface==4.3.2
+threadpoolctl==3.0.0
+tk==8.6.1
+toml==0.10.2
+torch==1.9.0+cu111
+torchvision==0.11.1+cu111
+tqdm=4.62.3
+typing_extensions==4.0.1
+urllib3==1.26.7
+Werkzeug==2.0.2
+wheel==0.37.0
+wrapt==1.13.3
+xz==5.2.5
+zipp==3.7.0
+zlib==1.2.11 
